# examples

./: .gitignore  Cargo.toml  README.md
actix-web/defer/: Cargo.toml  README.md
actix-web/defer/client/: package.json
actix-web/defer/client/src/: app.js  books.js
actix-web/defer/src/: main.rs
actix-web/error-extensions/: Cargo.toml
actix-web/error-extensions/src/: main.rs
actix-web/full-query-error-log/: Cargo.toml
actix-web/full-query-error-log/src/: main.rs
actix-web/starwars/: Cargo.toml
actix-web/starwars/src/: main.rs
actix-web/subscription/: Cargo.toml
actix-web/subscription/src/: main.rs
actix-web/token-from-header/: Cargo.toml
actix-web/token-from-header/src/: main.rs
actix-web/upload/: Cargo.toml
actix-web/upload/src/: main.rs
axum/starwars/: Cargo.toml
axum/starwars/src/: main.rs
axum/subscription/: Cargo.toml
axum/subscription/src/: main.rs
axum/token-from-header/: Cargo.toml
axum/token-from-header/src/: main.rs
axum/upload/: Cargo.toml
axum/upload/src/: main.rs
federation/: README.md  start.sh
federation/directives/: Cargo.toml
federation/directives/src/: lib.rs
federation/dynamic-schema/: query.graphql  start.sh
federation/dynamic-schema/federation-accounts/: Cargo.toml
federation/dynamic-schema/federation-accounts/src/: main.rs
federation/dynamic-schema/federation-products/: Cargo.toml
federation/dynamic-schema/federation-products/src/: main.rs
federation/dynamic-schema/federation-reviews/: Cargo.toml
federation/dynamic-schema/federation-reviews/src/: main.rs
federation/federation-accounts/: Cargo.toml
federation/federation-accounts/src/: main.rs
federation/federation-products/: Cargo.toml
federation/federation-products/src/: main.rs
federation/federation-reviews/: Cargo.toml
federation/federation-reviews/src/: main.rs
federation/gateway/: package.json  start.sh
federation/static-schema/: README.md  start.sh
federation/static-schema/directives/: Cargo.toml
federation/static-schema/federation-accounts/: Cargo.toml
federation/static-schema/federation-accounts/src/: main.rs
federation/static-schema/federation-products/: Cargo.toml
federation/static-schema/federation-products/src/: main.rs
federation/static-schema/federation-reviews/: Cargo.toml
federation/static-schema/federation-reviews/src/: main.rs
loco/starwars/: Cargo.toml  README.md
loco/starwars/src/: app.rs
loco/starwars/src/controllers/: graphiql.rs  mod.rs
loco/subscription/: Cargo.toml
loco/subscription/src/: app.rs
loco/subscription/src/controllers/: graphiql.rs
models/books/: Cargo.toml
models/books/src/: lib.rs  simple_broker.rs
models/dynamic-books/: Cargo.toml
models/dynamic-books/src/: lib.rs  model.rs
models/dynamic-files/: Cargo.toml
models/dynamic-files/src/: lib.rs
models/dynamic-starwars/: Cargo.toml
models/dynamic-starwars/src/: lib.rs  model.rs
models/files/: Cargo.toml
models/files/src/: lib.rs
models/starwars/: Cargo.toml
models/starwars/src/: lib.rs  model.rs
models/token/: Cargo.toml
models/token/src/: lib.rs
opentelemetry-basic/: Cargo.toml
opentelemetry-basic/src/: main.rs
poem/dynamic-books/: Cargo.toml
poem/dynamic-books/src/: main.rs
poem/dynamic-schema/: Cargo.toml
poem/dynamic-schema/src/: main.rs
poem/dynamic-starwars/: Cargo.toml
poem/dynamic-starwars/src/: main.rs
poem/dynamic-upload/: Cargo.toml
poem/dynamic-upload/src/: main.rs
poem/opentelemetry-basic/: Cargo.toml
poem/opentelemetry-basic/src/: main.rs
poem/starwars/: Cargo.toml
poem/starwars/src/: main.rs
poem/subscription/: Cargo.toml
poem/subscription-redis/: Cargo.toml
poem/subscription-redis/src/: main.rs
poem/subscription/src/: main.rs
poem/token-from-header/: Cargo.toml
poem/token-from-header/src/: main.rs
poem/upload/: Cargo.toml
poem/upload/src/: main.rs
rocket/starwars/: Cargo.toml  Rocket.toml
rocket/starwars/src/: main.rs
rocket/upload/: Cargo.toml  Rocket.toml
rocket/upload/src/: main.rs
tide/dataloader/: Cargo.toml
tide/dataloader-postgres/: Cargo.toml
tide/dataloader-postgres/src/: main.rs
tide/dataloader/src/: main.rs
tide/starwars/: Cargo.toml
tide/starwars/src/: main.rs
tide/subscription/: Cargo.toml
tide/subscription/src/: main.rs
tide/token-from-header/: Cargo.toml
tide/token-from-header/src/: main.rs
warp/defer/: Cargo.toml
warp/defer/client/: .gitattributes  .gitignore  .graphqlconfig  .prettierignore  README.md  babel.config.js  bsconfig.json  next.config.js  package.json  relay.config.js  schema.graphql  tailwind.config.js
warp/defer/client/src/__generated__/: pagesQuery_graphql.bs.js  pagesQuery_graphql.re  pages_book_graphql.bs.js  pages_book_graphql.re  pages_comments_book_graphql.bs.js  pages_comments_book_graphql.re
warp/defer/client/src/bindings/: RelayEnvHack.js  RelayHack.bs.js  RelayHack.re
warp/defer/client/src/components/: ErrorBoundary.bs.js  ErrorBoundary.re
warp/defer/client/src/helpers/: RelayEnv.bs.js  RelayEnv.re
warp/defer/client/src/pages/: _app.js  _document.js  index.bs.js  index.re
warp/defer/client/src/styles/: main.css
warp/defer/src/: main.rs
warp/starwars/: Cargo.toml
warp/starwars/src/: main.rs
warp/subscription/: Cargo.toml
warp/subscription/src/: main.rs
warp/token-from-header/: Cargo.toml
warp/token-from-header/src/: main.rs
