[workspace]
members = [
    "models/starwars",
    "models/books",
    "models/files",
    "models/token",

    "poem/starwars",
    "poem/subscription",
    "poem/token-from-header",

    "actix-web/token-from-header",
    "actix-web/subscription",
    "actix-web/upload",
    "actix-web/starwars",
    "actix-web/error-extensions",

    "warp/starwars",
    "warp/subscription",
    "warp/token-from-header",

    "federation/federation-accounts",
    "federation/federation-products",
    "federation/federation-reviews",

    "rocket/starwars",
    "rocket/upload",

    "axum/starwars",
    "axum/subscription",

    "tide/starwars",
    "tide/dataloader",
    "tide/dataloader-postgres",
    "tide/subscription",
]
