[workspace]
members = [
	"models/starwars",
	"models/dynamic-starwars",
	"models/books",
	"models/files",
	"models/token",

	"poem/opentelemetry-basic",
	"poem/starwars",
	"poem/subscription",
	"poem/subscription-redis",
	"poem/token-from-header",
	"poem/upload",
	"poem/dynamic-schema",
	"poem/dynamic-starwars",
	"poem/dynamic-books",


	"actix-web/token-from-header",
	"actix-web/subscription",
	"actix-web/upload",
	"actix-web/starwars",
	"actix-web/error-extensions",

	"warp/starwars",
	"warp/subscription",
	"warp/token-from-header",

	"rocket/starwars",
	"rocket/upload",

	"axum/starwars",
	"axum/subscription",
	"axum/upload",
	"axum/token-from-header",

	"tide/starwars",
	"tide/dataloader",
	"tide/dataloader-postgres",
	"tide/subscription",

	"federation/static-schema/federation-accounts",
	"federation/static-schema/federation-products",
	"federation/static-schema/federation-reviews",

	"federation/dynamic-schema/federation-accounts",
	"federation/dynamic-schema/federation-products",
	"federation/dynamic-schema/federation-reviews",
]
