[package]
name = "actix-web-defer"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql = { path = "C:\\Users\\scott\\Documents\\work\\async-graphql" }
async-graphql-actix-web = { path = "C:\\Users\\scott\\Documents\\work\\async-graphql\\async-graphql-actix-web" }
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-cors = "0.2.0"
thiserror = "1.0"
serde_json = "1.0"
futures = "0.3.4"