[package]
name = "actix-web-error-extensions"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql = {git = "https://github.com/msdinit/async-graphql", rev = "06e4398"}
async-graphql-actix-web = {git = "https://github.com/msdinit/async-graphql", rev = "06e4398"}
actix-web = "2.0.0"
actix-rt = "1.0.0"
thiserror = "1.0"
serde_json = "1.0"
