[package]
name = "actix-web-error-extensions"
version = "0.1.1"
authors = ["sunli <scott_s829@163.com>"]
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-actix-web = { path = "../../../integrations/actix-web" }
actix-web = { version = "4.0.0-beta.8", default-features = false }
thiserror = "1.0"
serde_json = "1.0"
