[package]
name = "actix-web-starwars"
version = "0.1.1"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-actix-web = { path = "../../../integrations/actix-web" }
actix-web = "4.0.0-beta.10"
actix-rt = "2.2.0"
starwars = { path = "../../models/starwars" }
