[package]
name = "actix-web-subscription"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql = "2.0.0-alpha.2"
async-graphql-actix-web = "2.0.0-alpha.2"
actix-web = "3.0.0"
actix-rt = "1.1.0"
actix-web-actors = "3.0.0"
books = { path = "../../models/books" }