[package]
name = "actix-web-token-from-header"
version = "0.1.1"
authors = ["sunli <scott_s829@163.com>"]
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-actix-web = { path = "../../../integrations/actix-web" }
actix-web = { version = "4.0.0-beta.18", default-features = false }
token = { path = "../../models/token" }
