[package]
name = "actix-web-token-from-header"
version = "0.1.1"
authors = ["sunli <scott_s829@163.com>"]
edition = "2024"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-actix-web = { path = "../../../integrations/actix-web" }
actix-web = { version = "4.5.1", default-features = false, features = [
    "macros",
] }
token = { path = "../../models/token" }
