[package]
name = "actix-web-upload"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql = { path = "../../..", version = "2.0.0" }
async-graphql-actix-web = { path = "../../../integrations/actix-web", version = "2.0.0" }
actix-web = "3.0.0"
actix-rt = "1.1.0"
files = { path = "../../models/files" }
