[package]
name = "axum-starwars"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-axum = { path = "../../../integrations/axum" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
starwars = { path = "../../models/starwars" }
hyper = "0.14"
axum = { version = "0.3", features = ["headers"] }
