[package]
name = "axum-starwars"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-axum = { path = "../../../integrations/axum" }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
starwars = { path = "../../models/starwars" }
hyper = "1.0.1"
axum = { version = "0.7.1" }
