[package]
name = "subscription"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-axum = { path = "../../../integrations/axum" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
books = { path = "../../models/books" }
hyper = "0.14"
axum = { version = "0.6.0", features = ["ws", "headers"] }
