[package]
name = "axum-token-from-header"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-axum = { path = "../../../integrations/axum" }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
token = { path = "../../models/token" }
hyper = "1.0.1"
axum = { version = "0.7.1", features = ["ws"] }