[package]
name = "axum-token-from-header"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-axum = { path = "../../../integrations/axum" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
token = { path = "../../models/token" }
axum = { version = "0.7.5", features = ["ws"] }
