[package]
name = "axum-upload"
version = "0.1.1"
authors = ["sunli <scott_s829@163.com>"]
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-axum = { path = "../../../integrations/axum" }
axum = "0.7.1"
files = { path = "../../models/files" }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
hyper = "1.0.1"
tower-http = { version = "0.5.0", features = ["cors"] }
