[package]
name = "axum-upload"
version = "0.1.1"
authors = ["sunli <scott_s829@163.com>"]
edition = "2024"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-axum = { path = "../../../integrations/axum" }
axum = "0.8.1"
files = { path = "../../models/files" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
