[package]
name = "federation-accounts"
version = "0.1.1"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-warp = { path = "../../../integrations/warp" }
tokio = { version = "0.3.0", features = ["macros", "rt-multi-thread"] }
warp = "0.2"
