[package]
name = "federation-reviews"
version = "0.2.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-warp = { path = "../../../integrations/warp" }
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3"