[package]
name = "poem-dynamic-books"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../..", features = ["dynamic-schema"] }
async-graphql-poem = { path = "../../../integrations/poem" }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
dynamic-books = { path = "../../models/dynamic-books" }
poem = "1.3.57"
