[package]
name = "poem-dynamic-starwars"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../..", features = ["dynamic-schema"] }
async-graphql-poem = { path = "../../../integrations/poem" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
dynamic-starwars = { path = "../../models/dynamic-starwars" }
poem = "3.0.0"