[package]
name = "dynamic-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../..", features = ["dynamic-schema"] }
async-graphql-poem = { path = "../../../integrations/poem" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
dynamic-files = { path = "../../models/dynamic-files" }
poem = "3.0.0"
