[package]
name = "poem-opentelemetry-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { path = "../../..", features = ["opentelemetry"] }
async-graphql-poem = { path = "../../../integrations/poem" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
poem = "2.0.1"
opentelemetry = { version = "0.22.0" }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
