[package]
name = "poem-starwars"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-poem = { path = "../../../integrations/poem" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
starwars = { path = "../../models/starwars" }
poem = "2.0.0"
