[package]
name = "poem-starwars"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-poem = { path = "../../../integrations/poem" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
starwars = { path = "../../models/starwars" }
poem = "3.0.0"
