[package]
name = "subscription-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-poem = { path = "../../../integrations/poem" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
poem = { version = "2.0.0", features = ["websocket"] }
redis = { version = "0.21.4", features = ["aio", "tokio-comp"] }
futures-util = "0.3.19"
