[package]
name = "subscription-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-poem = { path = "../../../integrations/poem" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
poem = { version = "3.0.0", features = ["websocket"] }
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
futures-util = "0.3.30"
