[package]
name = "poem-subscription"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-poem = { path = "../../../integrations/poem" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
books = { path = "../../models/books" }
poem = { version = "2.0.1", features = ["websocket"] }
