[package]
name = "rocket-starwars"
version = "0.1.0"
authors = ["Daniel Wiesenberg <daniel@simplificAR.io>"]
edition = "2018"

[dependencies]
async-graphql = { path = "../../..", version = "2.0.3" }
async-graphql-rocket = { path = "../../../integrations/rocket", version = "2.0.3" }
rocket = { git = "https://github.com/SergioBenitez/Rocket/", rev = "8da034a", default-features = false } # TODO: Change to Cargo crate when Rocket 0.5.0 is released
starwars = { path = "../../models/starwars" }
