[package]
name = "rocket-starwars"
version = "0.1.1"
authors = ["Daniel Wiesenberg <daniel@simplificAR.io>"]
edition = "2024"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-rocket = { path = "../../../integrations/rocket" }
rocket = { version = "0.5.0", default-features = false }
starwars = { path = "../../models/starwars" }
