[package]
name = "rocket-upload"
version = "0.1.1"
authors = ["Daniel Wiesenberg <daniel@simplificAR.io>"]
edition = "2018"

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-rocket = { path = "../../../integrations/rocket" }
rocket = { version = "0.5.0-rc.1", default-features = false }
files = { path = "../../models/files" }
