[package]
name = "dataloader-postgres"
version = "0.1.0"
authors = ["ejez <ejez@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { path = "../../.." }
async-graphql-tide = { path = "../../../integrations/tide" }
async-std = "1.9.0"
async-trait = "0.1.42"
itertools = "0.10.0"
sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "postgres"] }
tide = "0.15.0"

[dev-dependencies]
serde_json = "1.0.61"
surf = "2.1.0"
