[package]
name = "dataloader-postgres"
version = "0.1.0"
authors = ["ejez <ejez@protonmail.ch>"]
edition = "2018"

[dependencies]
async-graphql = { path = "../../..", features = ["dataloader"] }
async-graphql-tide = { path = "../../../integrations/tide" }
async-std = "1.9.0"
itertools = "0.10.0"
sqlx = { version = "0.7.2", features = [
    "runtime-async-std-rustls",
    "postgres",
] }
tide = "0.16.0"

[dev-dependencies]
serde_json = "1.0.61"
surf = "2.1.0"
