[package]
name = "tide-dataloader"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[dependencies]
async-graphql = { path = "../../..", features = ["dataloader"] }
async-graphql-tide = { path = "../../../integrations/tide" }
tide = "0.16"
async-std = "1.9.0"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-async-std-rustls"] }
itertools = "0.9.0"

[dev-dependencies]
serde_json = "1.0.51"
surf = "2.0.0-alpha.1"
